cd into project directory for tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
 
 jobs:
-  test:
+  test_1:
 
     runs-on: ubuntu-latest
     strategy:
@@ -27,9 +27,7 @@ jobs:
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: install dependencies
       run: gem install rspec
-    - name: Run RSpec Princess 1
+    - name: change working folder
       run: cd ./bot_saves_princess
-      run: rspec
-    - name: Run RSpec Princess 2
-      run: cd ./bot_saves_princess_2
+    - name: Run RSpec Princess 1
       run: rspec
